@@ -31,8 +31,10 @@ import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.program.Program;
 import org.eclipse.swt.widgets.Display;
+import org.eclipse.swt.widgets.Event;
 import org.eclipse.swt.widgets.Group;
 import org.eclipse.swt.widgets.Label;
+import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Shell;
 import org.gudy.azureus2.core3.internat.MessageText;
 import org.gudy.azureus2.core3.util.Constants;
@@ -129,6 +131,17 @@ public class AboutWindow {
         }
       });
     }
+    
+    Listener keyListener =  new Listener() {
+      public void handleEvent(Event e) {
+        System.out.println(e.character);
+        if(e.character == SWT.ESC) {
+          window.dispose();                
+        }
+      }
+    };
+    
+    window.addListener(SWT.KeyUp,keyListener);
   
     window.pack();
     Utils.centreWindow(window);
